--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -1,4 +1,7 @@
 header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background: white;
     height: 70px;
     width: 100%;
@@ -6,6 +9,20 @@ header {
 }
 header .logo {
     background: url("../images/logo.png") no-repeat;
-    left: 20px;
+    margin-left: 20px;
+    width: 100px;
     height: 100%;
+}
+
+
+.available {
+    background-color: #ff545f !important ;
+}
+
+#api_status {
+    background-color: #cccccc;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 30px; 
 }
