--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -10,7 +10,7 @@ header {
 header .logo {
     background: url("../images/logo.png") no-repeat;
     margin-left: 20px;
-    width: 100px;
+    width: 100%;
     height: 100%;
 }
 
