--- a/web_dynamic/static/styles/8-places.css
+++ b/web_dynamic/static/styles/8-places.css
@@ -17,7 +17,6 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
-    padding-bottom: 4rem;
 }
 
 .place {
@@ -101,4 +100,35 @@
 
 .user {
   margin-bottom: 1.5%;
+}
+
+.reviews h2 {
+    display: flex;
+    align-items: flex-end;
+    border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+.reviews {
+    display: block; 
+}
+
+.description {
+    margin-bottom: 5%;
+}
+
+.reviews h2 span {
+    font-size: 15px;
+    color: #000000;
+}
+
+.show_hide {
+    cursor: pointer; 
+}
+.reviews ul li {
+    margin-bottom: 5%;
 }
